--- a/config.json
+++ b/config.json
@@ -1,6 +1,13 @@
-BOT_TOKEN = os.getenv("BOT_TOKEN", "8500113818:AAECdcA15J1PBP8uYg4-bOF66RXIrZL161Y")
+import os
+from dotenv import load_dotenv
 
+load_dotenv()
+
+# Токен бота от @BotFather
+BOT_TOKEN = os.getenv("BOT_TOKEN", "YOUR_BOT_TOKEN_HERE")
+
+# Папка для хранения датасетов
 DATASETS_FOLDER = "datasets"
 
-
+# Создаём папку если не существует
 os.makedirs(DATASETS_FOLDER, exist_ok=True)
