--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-python-telegram-bot==20.6
-scikit-learn==1.3.2
-numpy
-rapidfuzz
+aiogram>=3.13.1
+aiosqlite>=0.20.0
+python-dotenv>=1.0.1
+orjson>=3.10.0
